Doc/force-app/main/default/objects/Select_Bundle_Lines__c/Select_Bundle_Lines__c.object-meta.xml
<CustomObject>
    <description>Maintains relationship of Select Bundle Parent Lines</description>
    <label>Select Bundle Lines</label>
    <nameField>
        <displayFormat>SelectBundle-{0000000}</displayFormat>
        <label>Select Bundle Lines Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Select Bundle Lines</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>