Doc/force-app/main/default/objects/Select_Bundle_Lines__c/fields/Index__c.field-meta.xml
<CustomField>
    <fullName>Index__c</fullName>
    <description>Capture Segment Index</description>
    <label>Index</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>